Bug 23926 - Made 3 dots vertically aligned

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -10448,11 +10448,14 @@ ul.select2-choices:after {
     height:100%;
     z-index: 3;
     font-size: 10px;
+    position: relative;
+    width: 13px;
 }
 
 .sidepanel-draggable div {
     cursor: col-resize;
-    position: relative;top: 50%;
+    position: absolute;
+    top: 50%;
     transform: translateY(-50%);
     margin: 1px;
 }
